# aggregate-prefixes

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  README.md  aggregate-prefixes.py  prefixes.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test-and-deploy.yml
aggregate_prefixes/: __about__.py  __init__.py  __main__.py  aggregate_prefixes.py  cli.py
tests/: test_regression.py
