[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.poetry]
name = "aggregate-prefixes"
version = "0.7.2"
description = ""
authors = ["Marco Marzetti <marco@lamehost.it>"]
readme = "README.md"
packages = [{include = "aggregate_prefixes"}]
homepage = "https://github.com/lamehost/aggregate-prefixes"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.9"
coverage = "^7.0.1"
flake8 = "^6.0.0"
pytest = "^7.2.0"
black = ">=23.3,<25.0"
isort = "^5.12.0"
pytest-cov = "^4.0.0"
bandit = "^1.7.9"

[tool.poetry.scripts]
aggregate-prefixes = "aggregate_prefixes.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
