[tool.isort]
profile = "black"

[tool.black]
line-length = 100

[tool.poetry]
name = "aggregate-prefixes"
version = "0.7.3"
description = ""
authors = ["Marco Marzetti <marco@lamehost.it>"]
readme = "README.md"
packages = [{include = "aggregate_prefixes"}]
homepage = "https://github.com/lamehost/aggregate-prefixes"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
coverage = "^7.0.1"
black = "^25.1.0"
isort = "^6.0.1"
bandit = "^1.7.9"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
flake8 = "^7.1.1"

[tool.poetry.scripts]
aggregate-prefixes = "aggregate_prefixes.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
